# deltia_challenge

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: deltia.rviz  placements.yaml  spatial.yaml
include/deltia_challenge/: action_node.hpp  sorting_node.hpp
launch/: deltia.launch.py  rviz.launch.py
scripts/: gui_node.py
src/: action_node.cpp  sorting_node.cpp
